# cmd/api/routes.go
@@ -1,10 +1,8 @@
 package main
 
 import (
-
 	httpSwagger "github.com/swaggo/http-swagger/v2"
 	"net/http"
-
 )
 
 func (app *application) routes() http.Handler {
@@ -15,13 +13,14 @@ func (app *application) routes() http.Handler {
 
 	mux.HandleFunc("POST /api/project/create", app.createProject)
 	mux.HandleFunc("GET /api/project/get_alls", app.getallProjects)
-	//mux.HandleFunc("GET /api/projec/available", app.getAvailableProjects)
+	mux.HandleFunc("GET /api/project/search", app.searchProject)
+
 
 	mux.HandleFunc("POST /api/participant/create", app.createParticipant)
 	mux.HandleFunc("GET /api/participant/get_alls", app.getallParticipant)
-	//mux.HandleFunc("GET /participant/:id/project" app.viewUserProject)
 
-	mux.HandleFunc("POST /api/assignments" , app.assigmentProject)
+	mux.HandleFunc("POST /api/assignments", app.assigmentProject)
+	mux.HandleFunc("GET /api/assignments", app.getAssignments)
 
-	return  app.enableCORS(app.logRequest(mux))
+	return app.enableCORS(app.logRequest(mux))
 }
