# docs/swagger.json
@@ -9,6 +9,27 @@
     "basePath": "/api/",
     "paths": {
         "/assignments": {
+            "get": {
+                "description": "Obtiene la lista de asignaciones con detalles del proyecto y participante",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AsignarProyecto"
+                ],
+                "summary": "Listar asignaciones de proyectos",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/store.AssignmentDetail"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Asigna un proyecto a un estudiante",
                 "consumes": [
@@ -155,6 +176,38 @@
                     }
                 }
             }
+        },
+        "/project/search": {
+            "get": {
+                "description": "Retorna una lista de proyectos cuyo nombre coincide parcialmente con el valor buscado",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proyectos"
+                ],
+                "summary": "Buscar proyectos por nombre",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nombre del proyecto a buscar",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Lista de proyectos encontrados",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/store.Project"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -166,6 +219,26 @@
                 },
                 "project_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "store.AssignmentDetail": {
+            "type": "object",
+            "properties": {
+                "participant_id": {
+                    "type": "integer"
+                },
+                "participant_last_name": {
+                    "type": "string"
+                },
+                "participant_name": {
+                    "type": "string"
+                },
+                "project_id": {
+                    "type": "integer"
+                },
+                "project_name": {
+                    "type": "string"
                 }
             }
         },
